@@ -71,3 +71,4 @@ v0.6
 
 * zapret-lib,zapret-antidpi: tls_mod_shim supports sni=%var subst
 * blockcheck2: syndata tests
+* nfqws2: reasm support negative overlaps without going beyond the starting seq. gaps are not supported.
